# otusCourseHW10

./: CMakeLists.txt  README.md  bulk.cpp  bulk_server.cpp  bulk_server.h  main.cpp
.github/workflows/: blank.yml
